# talks

./: .gitignore  README.md
gerrit_10_12_25/: main.md
golang_dorset_15_04_24/: main.md
golang_dorset_15_04_24/demo/with-bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  go.mod
golang_dorset_15_04_24/demo/with-ko/: Makefile  go.mod  main.go
gsap3_29_05_25/: main.md
gsap3_29_05_25/angularanimation/: README.md  angular.json  package-lock.json  package.json
gsap3_29_05_25/angularanimation/src/: index.html
gsap3_29_05_25/angularanimation/src/app/: app.component.ts
